--- a/exam-review.css
+++ b/exam-review.css
@@ -11,3 +11,15 @@ h4{
 h2{
   border-bottom:20px;
 }
+.container{
+  max-width: 800px;
+  margin: 0 auto;
+  background-color: white;
+  padding: 20px 20px 20px 20px;
+}
+body{
+  background-color: darkgrey;
+}
+.right-column{
+  background-color: #f7f7f7;
+}
